--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </main>
 
         <footer>
-  <p>© 2025 <a href="https://sudarsansda.github.io/portfolio/" target="_blank">P Sudarsan</a> / Doubt Topia</p>
+  <p>© 2025 <a href="https://sudarsansda.github.io/portfolio/" target="_blank">P Sudarsan</a></p>
 </footer>
 
     </div>
