Changed the foofete hyper link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <footer>
           <p>
-            Developed by <a href="https://sudarsansda.github.io/portfolio/" target="_blank" rel="noopener noreferrer">P Sudarsan</a>
+            Developed by <a href="https://sudarsan.net.in" target="_blank" rel="noopener noreferrer">P Sudarsan</a>
             <br>
             © 2024 <!-- Assuming current year, adjust if needed -->
           </p>
