--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
         </footer>
     </div>
 
-    <script src="script.js"></script> <!-- Make sure script.js is the one handling fullscreen & mobile PDF opening -->
+    <script src="script.js"></script> 
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C74E03SDX3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-C74E03SDX3');
+</script><!-- Make sure script.js is the one handling fullscreen & mobile PDF opening -->
 </body>
 </html>
